[package]
name = "app"
version = "0.1.0"
authors = ["volyx <volyihin@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"


[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f401", ]



# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
